﻿                   Yii Framework Change Log
                   ========================

Version 1.1.21 under development
--------------------------------

- Bug #4220: Fixed PHP 7.2 incompatibility caused by the use of `create_function` in CHttpRequest (martinpetrasch)
- Bug #4229: Remove deprecation errors from framework/web/js/source/jquery.yiiactiveform.js when using jQuery 3.1.1 (kenguest)

Version 1.1.20 July 6, 2018
---------------------------

- Bug #4182: CSecurityManager requires mcrypt extension to work, and for PHP 7.2 we need to install it from pecl (sergey-dryabzhinsky)
- Bug #4162: Adjusted Zend Escaper to be compatible with PHP <5.3 and fixed usage of non-existing Exceptions (cebe)
- Bug #4167: Fixed PHP 7.2 incompatibility of "count()" in `CActiveFinder` and CController::renderDynamic() (softark, ThePepster)
- Bug #4168: Fixed `CDbHttpSession` PHP 7.1 compatibility (csears123)
- Bug #4179: Fixed MariaDB 10.2 current_timestamp() (yaBliznyk)
- Bug #4191: Fixed "Headers already sent." error in CHttpSession (daniel1302)
- Bug #4191: Fixed "CHtml::value() behaves differently for objects" for PHP 7.2 (daniel1302)
- Bug #4197: Fixed PHP 7.2 assert with string argument is deprecated warning using Gii (ThePepster)
- Bug #4203: Fixed `CHttpCacheFilter::sendCacheControlHeader` PHP 7.2 compatibility (b1rdex)
- Enh #4191: Added option for filter classes loaded by YiiBase autoloader (daniel1302)
- Chg #4160: Updated HTMLPurifier to version 4.9.3 (takobell)
- Bug #4198: Fixed PHP 7.2 SQLSRV lastInsertId (agusdrs)

Version 1.1.19 June 8, 2017
---------------------------

- Bug #4155: Ignore PHP 7.1 warnings about deprecated mcrypt (samdark)
- Bug #4156: Timeout in checkMxPorts of mail validator is now configurable (kenguest, samdark)
- Enh: Fixed PHPUnit 6 compatibility (samdark)
- Enh: Reworked model error escaping to escape on output rather than in validators directly (Zaffy, samdark)

Version 1.1.18 April 19, 2017
-----------------------------
